Refactoring rules in mixins, and fixed some positions and alignments in the animations rules.

--- a/assets/css/Base/_normalize.scss
+++ b/assets/css/Base/_normalize.scss
@@ -1,4 +1,4 @@
-body {
+* {
     box-sizing: border-box;
     @include no-margin-neither-padding;
     @include text-font;
@@ -17,5 +17,5 @@ ul {
 }
 
 section {
-    @include flex-column;
+    @include flex(column);
 }
