--- a/assets/css/Components/_load-spin.scss
+++ b/assets/css/Components/_load-spin.scss
@@ -3,31 +3,33 @@
         0% {
             opacity: 0;
         }
-        90% {
+        85% {
             opacity: 0.01;
         }
-        91% {
+        87% {
             opacity: 0.02;
         }
-        92% {
+        88% {
             opacity: 0.05;
         }
-        93% {
+        90% {
             opacity: 0.08;
         }
-        94% {
+        91% {
             opacity: 0.1;
+        }
+        93% {
+            opacity: 0.5;
         }
         100% {
             opacity: 1;
         }
     }
-    animation: content-loading 4500ms ease-out both;
+    animation: content-loading 4000ms ease-out both;
 }
 
 .loader {
-    display: block;
-    position: fixed;
+    @include block(auto, auto, fixed);
     top: 0%;
     bottom: 0%;
     right: 0%;
@@ -69,19 +71,13 @@
     }
     animation: load-opacity 4500ms both ease-in-out;
     &__span {
-        display: block;
-        width: 100%;
-        height: 100%;
-        overflow: visible;
+        @include block(auto, auto, none, visible);
     }
     &__icon {
         display: block;
         font-size: 50px;
         &::before {
-            @include block-relative;
-            width: auto;
-            height: auto;
-            overflow: visible;
+            @include block(auto, auto, relative, visible);
             @keyframes icon-spin {
                 from {
                     transform: rotate(00deg);
@@ -99,6 +95,9 @@
             @include pad-media-query {
                 left: 25%;
             }
+            @include desktop-media-query {
+                left: 30%;
+            }
         }
         &--2 {
             @include block-absolute;
@@ -107,27 +106,30 @@
             @include pad-media-query {
                 right: 25%;
             }
+            @include desktop-media-query {
+                right: 30%;
+            }
         }
         &--3 {
             @include block-absolute;
             left: 45%;
-            bottom: 54%;
+            bottom: 45%;
             @include pad-media-query {
-                left: 47%;
-                bottom: 54%;
+                left: 50%;
             }
         }
         &--4 {
             @include block-absolute;
             left: 45%;
-            top: 10%;
+            top: 5%;
             @include pad-media-query {
-                left: 47%;
+                left: 50%;
+                top: 3%;
             }
         }
     }
     &__name {
-        @include block-relative;
+        @include block(auto, auto, relative, visible);
         font-size: 3rem;
         top: 25%;
         font-family: Shrikhand;
