--- a/assets/css/Utils/_mixins.scss
+++ b/assets/css/Utils/_mixins.scss
@@ -1,7 +1,8 @@
 /* flexbox */
 
-@mixin flex {
+@mixin flex($dir: row) {
     display: flex;
+    flex-direction: $dir;
     box-sizing: border-box;
 }
 
@@ -77,7 +78,7 @@
 }
 
 
-/* Styling */
+/* Multi-rules styling */
 
 @mixin icon-styling {
     margin-right: 2.66%;
@@ -96,15 +97,26 @@
     text-overflow: ellipsis;
 }
 
+@mixin back-gradient-clip-transp {
+    @include back-gradient;
+    -webkit-background-clip: text;
+    -ms-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
 @mixin block-absolute {
     display: block;
     position: absolute;
     color: $color-tertiary;
 }
 
-@mixin block-relative {
+@mixin block($height: auto, $width: auto, $position: absolute, $overflow: visible) {
     display: block;
-    position: relative;
+    height: $height;
+    width: $width;
+    position: $position;
+    overflow: $overflow;
 }
 
 
@@ -188,16 +200,8 @@
     background: $gradient;
 }
 
-@mixin back-gradient-clip-transp {
-    @include back-gradient;
-    -webkit-background-clip: text;
-    -ms-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
 
-
-/* Animations */
+/* Animations and transitions */
 
 @mixin transition {
     transition: transform 500ms ease-in-out;
